# lib/db/src/schema/index.ts
@@ -8,3 +8,4 @@ export * from "./crops";
 export * from "./storage";
 export * from "./equipment";
 export * from "./inputs";
+export * from "./messages";
